sema/testdata/gcc-c99-extra/reject/utf-badconcat.c
void	*s0	= u"a"  "b";
void	*s1	=  "a" u"b";
void	*s2	= u"a" U"b";
void	*s3	= U"a" u"b";
void	*s4	= u"a" L"b";
void	*s5	= L"a" u"b";
void	*s6	= u"a" u"b";
void	*s7	= U"a"  "b";
void	*s8	=  "a" U"b";
void	*s9	= U"a" L"b";
void	*sa	= L"a" U"b";
void	*sb	= U"a" U"b";
void	*sc	= L"a"  "b";
void	*sd	=  "a" L"b";
void	*se	= L"a" L"b";

int main () {}
